Closed Bug 1250213 Opened 9 years ago Closed 9 years ago

Fullscreen video controls' hit-targets are wrong -- taps on their top half don't work

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

47 Branch
defect
Not set
normal

Tracking

(firefox46 unaffected, firefox47+ unaffected, firefox48 fixed)

RESOLVED FIXED
Firefox 48
Tracking Status
firefox46 --- unaffected
firefox47 + unaffected
firefox48 --- fixed

People

(Reporter: dholbert, Assigned: rbarker)

References

Details

(Keywords: regression)

Attachments

(1 file)

tl;dr: view a video in fullscreen, and try to tap the play/pause button. It doesn't work -- the hit target for the button seems to be directly below the button's visual location. (overlaying the scrubber bar) STR: 1. In Firefox for Android, view some video file, e.g. http://mirror.cessen.com/blender.org/peach/trailer/trailer_iphone.m4v 2. Rotate the phone into landscape mode (or have it already in landscape mode) 3. Tap the video to make controls appear, & tap the "fullscreen" button at the bottom-left of the video. 4. Tap the (now-fullscreen) video to make controls appear again, and try to tap the play/pause or mute button. ACTUAL RESULTS: The button doesn't get activated. The tap is treated just like a screen-tap, and the controls simply disappear. EXPECTED RESULTS: The button should be activated. Note: If you tap the space *below* the button (on the scrubber bar), then the button will be activated. It looks like the button has the wrong hit target. I can reproduce in latest Nightly 47.0a1 (2016-02-22). I cannot reproduce in latest Aurora 46.0a2 (2016-02-22). So, looks like this is a regression.
[Tracking Requested - why for this release]: Regression. Might disabling link re-targeting + APZ? Bug 1247095 Will work on a regression range.
I'm working on a regression range right now, actually. Tentatively looks like this is the range for m-c: 12:46.64 INFO: Last good revision: 0ecd7d72f232304da046b352c457e039e35ceed7 (2016-01-28) 12:46.64 INFO: First bad revision: 8a3c5c9b1486c3328bc4684d5ac5b3b849b09474 (2016-01-29) 12:46.64 INFO: Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0ecd7d72f232304da046b352c457e039e35ceed7&tochange=8a3c5c9b1486c3328bc4684d5ac5b3b849b09474 mozregression is now getting inbound builds, so I'll have a smaller range soon.
My first guess is that this is from: > 0c7cca996d60 Kartikaya Gupta — Bug 1243547 - Route scroll position adjusting for surface shifting directly to APZC. r=rbarker
Flags: needinfo?(bugmail.mozilla)
tighter regression range, from using inbound: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=38335c435a459fd499bc51aa10bae2ead5176eec&tochange=23f22124b285c901e08e29b2d73fa830fc1c8b5c Bug 1243547 still looks like the most relevant bug in that range. Also: note that the best way to test this is to try tapping the *top half* of these icons. (If you tap the bottom part of the icon, you might end up hitting the mispositioned hit-box and activating the button. The top part is pretty reliably broken, though.) --> Updating summary to clarify.
Blocks: 1243547
Summary: Fullscreen video controls' hit-targets are wrong (can't be tapped directly) → Fullscreen video controls' hit-targets are wrong -- taps on their top half don't work
Component: Audio/Video → Graphics, Panning and Zooming
I can repro. Definitely seems APZ-related. If I swipe the video (as though scrolling the page) it fixes itself, so it seems like there's just some state which is out of sync. This will likely only affect Fennec with APZ enabled (so nightly-only for now, since APZ is not riding the trains on Fennec).
Flags: needinfo?(bugmail.mozilla)
Assignee: nobody → rbarker
Tracking this since it is a regression and we have someone assigned.
Comment on attachment 8727560 [details] [diff] [review] 0001-Bug-1250213-Ensure-the-scroll-offset-does-not-go-outside-the-page-bounds-when-going-full-screen-16030712-6c1cb54.patch Review of attachment 8727560 [details] [diff] [review]: ----------------------------------------------------------------- Thanks!
Attachment #8727560 - Flags: review?(bugmail.mozilla) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 48
APZ on Fennec isn't in 47, so marking 47 as unaffected.
Version: unspecified → 47 Branch
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: