Bug 1250213 - Ensure the scroll offset does not go outside the page bounds when going full screen r=kats